修改主机凭据管理接口
